8322292: Use copy